[Document] Support swagger API key auth for list transaction.
